# active-learning-v2

./: .gitignore  README.md  main-SLemWUtC.js  modal_ablation.py  modal_active_embedding_precompute.py  modal_active_episode_smoke.py  modal_active_exact_window_blend_rank.py  modal_active_final_blend_rank.py  modal_active_label_gain.py  modal_active_loop_eval.py  modal_active_quality_metadata.py  modal_active_ranker_train.py  modal_active_spike_hygiene_ablation.py  modal_active_support_sampling_stability.py  modal_active_support_subset_audit.py  modal_active_topk_audit_pack.py  modal_active_trace_gate_audit_pack.py  modal_audit.py  modal_build_full_support_shards.py  modal_cache_manifest_urls.py  modal_cache_new_split.py  modal_cache_source_archive.py  modal_cache_support_split.py  modal_embed_imagebind_imu.py  modal_embed_imu2clip.py  modal_eval.py  modal_grammar.py  modal_grammar_ablation.py  modal_learned_ranker.py  modal_marginal_coverage_eval.py  modal_motion_phrase_holdout.py  modal_physical_leave_cluster_eval.py  modal_probe_handcrafted_ranks.py  modal_probe_ts2vec_ranks.py  modal_rank.py  modal_rerank_eval.py  modal_score_calibration.py  modal_shadow_ranking.py  modal_source_archive_audit.py  modal_source_blocked_eval.py  (+9 more)
configs/: ablation_eval.json  active_embedding_precompute_scale_pretrain.json  active_embedding_precompute_ts2vec_full_new.json  active_embedding_precompute_ts2vec_new_only_h100.json  active_episode_full_pretrain.json  active_episode_scale_pretrain.json  active_episode_smoke_full_pretrain.json  active_exact_full_ts2vec_window_blend_rank.json  (+166 more)
(+318 files in other folders)
